# article-fastapi-python-api

./: Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: pyproject.toml
src/app/: main.py
src/app/domain/: user.py
src/app/repository/: memrepo.py
src/app/rest/: rest.py  user.py
src/app/serializers/: user.py
src/app/use_cases/: user_list.py
src/tests/: conftest.py  test_main.py
src/tests/domain/: test_user.py
src/tests/repository/: test_memrepo.py
src/tests/rest/: test_user.py
src/tests/serializers/: test_user.py
src/tests/use_cases/: test_user_list.py
