[tool.poetry]
name = "article-fastapi-python-api"
version = "0.1.0"
description = "Backend logic implementation with FastAPI"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
